final after release

--- a/tex_live/1_MulticsHistory.tex
+++ b/tex_live/1_MulticsHistory.tex
@@ -19,7 +19,7 @@ had been proposed by MIT Professor \textit{John McCarthy} in 1959.
 used until 2000. The system was started as a co-project of MIT's \textit{Project MAC}, \textit{Bell Labs} (withdrew from development 
  in 1969) and \textit{General Electric Company}.
 
-Chief o project was \textbf{Professor Fernando J.Corbató} (MIT). MIT operated a Multics timesharing serivce with over a thousand users 
+Chief of project was \textbf{Professor Fernando J.Corbató} (MIT). MIT operated a Multics timesharing service with over a thousand users 
 through the 1970s. Major customer of this service was Honeywell, which also helped a lot during the \textit{security enhancement era} 
 of Multics operating system.
 
@@ -27,7 +27,8 @@ Multics was invented to provide access to many remote terminal users simultaneou
 system. Multics combined ideas from other operating systems with new innovations. Security was a fundamental design requirement.
 Multics ran on specialized expensive CPU hardware that provided a segmented, paged, ring-structured virtual memory. 
 
-Multics was introduced in a series of papers at the 1965 Fall Joint Computer Conference
+Multics was introduced in a series of papers at the 1965 Fall Joint Computer Conference:
+
 \begin{itemize}
     \item Introduction and Overview of Multics System - F.J. Corbató, V.A. Vyssotsky
     \item System Design of a Computer for Time-Sharing Applications - E.L. Glaser, J.F. Couleur, G.A. Oliver
@@ -35,17 +36,19 @@ Multics was introduced in a series of papers at the 1965 Fall Joint Computer Con
     \item Communications and Input/Output Switching in a Multiplex Computing System -  J.F. Ossanna, L. Mikus, S.D. Dunten
     \item Some Thoughts About the Social Implications of Accessible Computing - E.E. David Jr., R.M. Fano
 \end{itemize}
-\section{Features}
 
-%# TODO add Figure timeline.png [multicians.org]
+\begin{figure}
+    \includegraphics[scale=0.55]{images/timeline.png}
+    \caption{Timeline of Multics \cite{multicians}}
+    % \label{fig:my_label}
+\end{figure}
+
 
 \subsection{Major Goals for Multics}
-
-Were described by Corbato and Vyssotsky in # PRIDAJ \ref{Introduction and Overview of The Multics System}
-
+\textbf{Goals for Multics are described by Corbato and Vyssotsky in \textit{Introduction and Overview of Multics System}} \cite{introductionMultics}.
 \begin{itemize}
     \item Convenient remote terminal use.
-    \item Continuous operation analogous to power & telephone services.
+    \item Continuous operation analogous to power and telephone services.
     \item A wide range of system configurations, changeable without system or user program reorganization.
     \item A high reliability internal file system.
     \item Support for selective information sharing.
@@ -56,13 +59,10 @@ Were described by Corbato and Vyssotsky in # PRIDAJ \ref{Introduction and Overvi
 \end{itemize}
 
 The team's ambition was that Multics would change the way people used and programmed computers.
-
-%# TODO qoute Garnfinkel
-% "One of the great unanticipated discoveries of Project MAC was that 
-% when more than one person can use a computer at the same time, those people will
-% use the computer to communicate with each other." 
-% -- Simson Garfinkel, Architects of the Information Society
-
-%# TODO qoute Thompson
-% To what extent should one trust a statement that a program is free of Trojan horses? 
-% Perhaps it is more important to trust the people who wrote the software.
+\newline
+\begin{displayquote}
+"One of the great unanticipated discoveries of Project MAC was that 
+when more than one person can use a computer at the same time, those people will
+use the computer to communicate with each other." 
+\textbf{Simson Garfinkel, Architects of the Information Society}
+\end{displayquote}
